--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Aaron Saralegui - Web Developer</title>
+  <link
+     href="https://fonts.googleapis.com/icon?family=Material+Icons"
+     rel="stylesheet"
+   />
+    <title>Aaron Saralegui - Web Developer</title>
 </head>
 <body>
   <div class="parent">
@@ -14,13 +18,18 @@
           <div class="site-header">Aaron Saralegui</div>
           <div class="site-subheader">Web Developer</div>
           <ul class="site-navigation">
-            <li><a href="index.html">Home</a></li>
+            <li>
+              <a href="index.html">
+                <i class="material-icons">home</i> Home
+              </a>
+            </li>
           </ul>
         </div>
       </nav>
       <main>
         <div class="menu">
           <div class="menu-icon" id="sidebarCollapse">
+            <i class="material-icons"> list </i>
             <span class="mobile-header">Aaron Saralegui: Web Developer</span>
           </div>
         </div>
