Add Font Awesome Icons

--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link
-     href="https://fonts.googleapis.com/icon?family=Material+Icons"
-     rel="stylesheet"
-   />
+ <link 
+  rel="stylesheet" 
+  href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
+ />
     <title>Aaron Saralegui - Web Developer</title>
 </head>
 <body>
-<<<<<<< HEAD
   <div class="parent">
     <div class="wrapper">
       <nav>
@@ -19,18 +18,14 @@
           <div class="site-header">Aaron Saralegui</div>
           <div class="site-subheader">Web Developer</div>
           <ul class="site-navigation">
-            <li>
-              <a href="index.html">
-                <i class="material-icons">home</i> Home
-              </a>
-            </li>
+            <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
           </ul>
         </div>
       </nav>
       <main>
         <div class="menu">
           <div class="menu-icon" id="sidebarCollapse">
-            <i class="material-icons"> list </i>
+            <i class="fas fa-bars"></i>
             <span class="mobile-header">Aaron Saralegui: Web Developer</span>
           </div>
         </div>
@@ -85,9 +80,5 @@
 
     </div>
   </div>
-
-=======
->>>>>>> parent of d563542... Add required HTML elements to the blog page skeleton.
-
 </body>
 </html>
