--- a/contact.html
+++ b/contact.html
@@ -14,46 +14,34 @@
 </head>
 <body>
   <div class="parent">
-    <div class="wrapper">
+    <div class="wrapper">      
       <nav>
         <div class="inner-wrap">
-          <div class="site-header">Aaron Saralegui</div>
+          <div class="site-header">Insert Name</div>
           <div class="site-subheader">Web Developer</div>
           <ul class="site-navigation">
             <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
+            <li><a href="about.html"><i class="fas fa-id-card"></i> About</a></li>
+            <li><a href="contact.html"><i class="fas fa-comment-dots"></i> Contact</a></li>
           </ul>
         </div>
       </nav>
       <main>
         <div class="menu">
-          <div class="menu-icon" id="sidebarCollapse">
-            <i class="fas fa-bars"></i>
-            <span class="mobile-header">Aaron Saralegui: Web Developer</span>
-          </div>
+          <div class="menu-icon" id="sidebarCollapse"><i class="fas fa-bars"></i> <span class="mobile-header">Your Name: Web Developer</span></div>
         </div>
         <h1>Contact</h1>
-        <article>
-         
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dapibus mauris eu nunc
-            dictum, sit amet elementum turpis viverra. Morbi vel tristique sem. Vivamus vel finibus velit, sit amet
-            dictum enim. Sed ac risus mi. Maecenas non lectus vitae magna laoreet pretium. Aenean leo turpis, facilisis
-            sed suscipit non, viverra non ex. Duis elementum lorem nulla, nec sollicitudin eros feugiat in. In
-            dignissim maximus nibh, eu faucibus nisl suscipit eget.
-          </p>
-          <p>
-           Cras ac odio viverra, semper est id, facilisis lectus. Aliquam eget sollicitudin eros, at posuere lorem.
-            Sed consectetur libero elit, sit amet ultrices eros auctor mollis. Praesent egestas blandit rutrum. Phasellus vel pretium nulla. Donec ut varius sapien. In maximus tincidunt lorem egestas eleifend. Vestibulum cursus ante
-            eget urna tempor, quis viverra mauris viverra. Ut nibh lorem, bibendum in accumsan quis, ullamcorper sed
-            tortor. Integer blandit aliquam nibh in pulvinar. Curabitur a malesuada purus, at scelerisque ligula. Morbi
-            malesuada pellentesque neque, id condimentum purus finibus eu.
-          </p>
-        </article>
-       
+        <h2>Want to work together? Hit me up online!</h2>
+        <hr />
+        <ul class="social">
+          <li><i class="fab fa-github"></i> <a href="#">Github</a></li>
+          <li><i class="fab fa-linkedin"></i> <a href="#">LinkedIn</a></li>
+          <li><i class="fab fa-twitter"></i> <a href="#">Twitter</a></li>
+        </ul>
+        <h2>Or drop me an <a href="#"><i class="fas fa-envelope"></i> Aaron.saralegui@gmail.com</a>.</h2>
         <footer>
-          Made with ❤️ Arizona. © 2019 All Rights Reserved
+          Made with ❤️ in Your Location Here. © 2018 All Rights Reserved
         </footer>
-
       </main>
 
     </div>
